tests/ui/invalid_pyfunction_signatures.stderr
error: missing signature entry for argument `_x`
 --> tests/ui/invalid_pyfunction_signatures.rs:6:8
  |
6 | #[pyo3(signature = ())]
  |        ^^^^^^^^^

error: signature entry does not have a corresponding function argument
  --> tests/ui/invalid_pyfunction_signatures.rs:10:21
   |
10 | #[pyo3(signature = (x))]
   |                     ^

error: expected argument from function definition `y` but got argument `x`
  --> tests/ui/invalid_pyfunction_signatures.rs:14:21
   |
14 | #[pyo3(signature = (x))]
   |                     ^

error: expected one of: `name`, `pass_module`, `signature`, `text_signature`, `crate`
  --> tests/ui/invalid_pyfunction_signatures.rs:19:14
   |
19 | #[pyfunction(x)]
   |              ^

error: `*args` not allowed after `*`
  --> tests/ui/invalid_pyfunction_signatures.rs:26:24
   |
26 | #[pyo3(signature = (*, *args))]
   |                        ^^^^^

error: `*` not allowed after `*`
  --> tests/ui/invalid_pyfunction_signatures.rs:32:24
   |
32 | #[pyo3(signature = (*, *))]
   |                        ^

error: `*args` not allowed after `**kwargs`
  --> tests/ui/invalid_pyfunction_signatures.rs:36:31
   |
36 | #[pyo3(signature = (**kwargs, *args))]
   |                               ^^^^^

error: `**kwargs_b` not allowed after `**kwargs_a`
  --> tests/ui/invalid_pyfunction_signatures.rs:43:33
   |
43 | #[pyo3(signature = (**kwargs_a, **kwargs_b))]
   |                                 ^^^^^^^^^^

error: arguments of type `Python` must not be part of the signature
  --> tests/ui/invalid_pyfunction_signatures.rs:49:27
   |
49 | #[pyfunction(signature = (py))]
   |                           ^^

error: cannot find attribute `args` in this scope
  --> tests/ui/invalid_pyfunction_signatures.rs:59:7
   |
59 |     #[args(x)]
   |       ^^^^
